<resources>
    <string name="app_name">趣看天下</string>

    <string name="tab_home">首页</string>
    <string name="tab_video">视频</string>
    <string name="tab_micro">微头条</string>
    <string name="tab_me">我的</string>

    <string name="comment">评论</string>
    <string name="img_unit">图</string>

    <string name="no_news_now">目前没有最新新闻了</string>

    <string name="refresh_pull_down_text">下拉推荐</string>
    <string name="refresh_release_text">松开推荐</string>
    <string name="refresh_ing_text">推荐中</string>

    <string name="detail_write_comment">写评论…</string>
    <string name="focus">关注</string>
    <string name="search_you_want_to_search">搜你想搜的</string>
    <string name="to_top">置顶</string>
    <string name="hot">热</string>
    <string name="ad">广告</string>
    <string name="tag_movie">影视</string>
    <string name="net_unavailable">网络不可用</string>
    <string name="login">登录</string>
    <string name="next">下一步</string>
    <string name="submit">提交</string>
    <string name="login_out">退出登录</string>
    <string name="regertse">注册送1元红包</string>
    <string name="show_pwd">显示密码</string>
    <string name="gone_pwd">隐藏密码</string>
    <string name="obtain_pwd">获取验证码</string>
    <string name="read_agreement">已阅读并同意</string>
    <string name="user_agreement">「趣看天下用户协议」</string>

    <string name="change_pwd">修改密码</string>
    <string name="change_info">完善资料</string>
    <string name="feedback">建议与反馈</string>
    <string name="agreement">隐私与协议</string>
    <string name="update">检查更新</string>
    <string name="about">关于我们</string>

    <string name="gdtslogan">GDTslogan</string>
    <string name="click_to_skip">点击跳过</string>
</resources>
