<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.yanhui.qktx.activity.MainActivity">

    <LinearLayout
        android:id="@+id/activity_main_bottom_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/bottom_menu"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingBottom="1dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/text_shy" />

        <com.chaychan.library.BottomBarLayout
            android:id="@+id/bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/tab_bg">

            <com.chaychan.library.BottomBarItem
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:iconNormal="@drawable/tab_home_normal"
                app:iconSelected="@drawable/tab_home_selected"
                app:itemMarginTop="-5dp"
                app:itemText="@string/tab_home"
                app:itemTextSize="8sp"
                app:openTouchBg="true"
                app:textColorNormal="@color/common_grey"
                app:textColorSelected="@color/status_color_red"
                app:touchDrawable="@drawable/selector_bottom_tab" />

            <com.chaychan.library.BottomBarItem
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:iconNormal="@drawable/tab_video_normal"
                app:iconSelected="@drawable/tab_video_selected"
                app:itemMarginTop="-5dp"
                app:itemText="@string/tab_video"
                app:itemTextSize="8sp"
                app:openTouchBg="true"
                app:textColorNormal="@color/common_grey"
                app:textColorSelected="@color/status_color_red"
                app:touchDrawable="@drawable/selector_bottom_tab" />

            <com.chaychan.library.BottomBarItem
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:iconNormal="@drawable/tab_me_normal"
                app:iconSelected="@drawable/tab_me_selected"
                app:itemMarginTop="-5dp"
                app:itemText="@string/tab_me"
                app:itemTextSize="8sp"
                app:openTouchBg="true"
                app:textColorNormal="@color/common_grey"
                app:textColorSelected="@color/status_color_red"
                app:touchDrawable="@drawable/selector_bottom_tab" />

        </com.chaychan.library.BottomBarLayout>


    </LinearLayout>

    <com.yanhui.qktx.view.widgets.MainViewPager
        android:id="@+id/activity_main_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/activity_main_bottom_bar_layout" />

</RelativeLayout>
