<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pull_refresh_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_login_bg">

        <ImageView
            android:id="@+id/image_login_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/icon_login_ip_mobile" />

        <EditText
            android:id="@+id/activity_register_et_mobile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@+id/image_login_clean"
            android:layout_toRightOf="@+id/image_login_phone"
            android:background="@null"
            android:digits="0123456789"
            android:hint="手机号"
            android:inputType="number"
            android:numeric="integer"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/text_shy" />

        <ImageButton
            android:id="@+id/image_register_clean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/icon_edt_clean" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_login_bg">

        <ImageView
            android:id="@+id/image_register_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/icon_login_chact_new_pwd" />

        <EditText
            android:id="@+id/activity_register_et_msg_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/image_register_pwd"
            android:background="@null"
            android:digits="0123456789"
            android:hint="请输入验证码"
            android:inputType="number"
            android:numeric="integer"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/text_shy" />

        <com.yanhui.qktx.view.widgets.TimeButton
            android:id="@+id/register_btn_get_msg_code"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/shape_register_get_verification_code"
            android:text="@string/obtain_pwd"
            android:textColor="@color/white"
            android:textSize="13dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_login_bg">

        <ImageView
            android:id="@+id/image_login_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/icon_login_new_ip_pwd" />

        <EditText
            android:id="@+id/activity_register_et_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/image_login_pwd"
            android:background="@null"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIGKLMNOPQRSTUVWXYZ"
            android:hint="设置密码(6-20位)"
            android:maxLength="20"
            android:password="true"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/text_shy" />

        <Button
            android:id="@+id/ctivity_register_show_pwd"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/shape_login_bg"
            android:text="@string/show_pwd"
            android:textColor="@color/text_shy" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <CheckBox
            android:id="@+id/activity_register_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:checked="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/read_agreement"
            android:textColor="@color/text_shy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/user_agreement"
            android:textColor="@color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/activity_register_bt"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_login_lo_bg"
        android:text="@string/regertse"
        android:textColor="@color/white"
        android:textSize="18dp">

    </Button>
</LinearLayout>